YAPLParser.py
# Generated from YAPL.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPLParser ( Parser ):

    grammarFileName = "YAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "';'", "'}'", "'('", "','", "')'", 
                     "':'", "'<-'", "'@'", "'.'", "'let'", "'+'", "'-'", 
                     "'*'", "'/'", "'~'", "'<'", "'<='", "'='", "'self'", 
                     "'class'", "'else'", "'fi'", "'if'", "'in'", "'inherits'", 
                     "'isvoid'", "'loop'", "'pool'", "'then'", "'while'", 
                     "'new'", "'not'", "'false'", "'true'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "CLASS", "ELSE", "FI", "IF", "IN", "INHERITS", 
                      "ISVOID", "LOOP", "POOL", "THEN", "WHILE", "NEW", 
                      "NOT", "FALSE", "TRUE", "TYPE_ID", "OBJECT_ID", "STRING", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "INTEGER", "WS" ]

    RULE_source = 0
    RULE_class_prod = 1
    RULE_id = 2
    RULE_feature = 3
    RULE_formal = 4
    RULE_expr = 5

    ruleNames =  [ "source", "class_prod", "id", "feature", "formal", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    CLASS=21
    ELSE=22
    FI=23
    IF=24
    IN=25
    INHERITS=26
    ISVOID=27
    LOOP=28
    POOL=29
    THEN=30
    WHILE=31
    NEW=32
    NOT=33
    FALSE=34
    TRUE=35
    TYPE_ID=36
    OBJECT_ID=37
    STRING=38
    LINE_COMMENT=39
    BLOCK_COMMENT=40
    INTEGER=41
    WS=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(YAPLParser.EOF, 0)

        def class_prod(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.Class_prodContext)
            else:
                return self.getTypedRuleContext(YAPLParser.Class_prodContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_source

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSource" ):
                listener.enterSource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSource" ):
                listener.exitSource(self)




    def source(self):

        localctx = YAPLParser.SourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_source)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 12
                self.class_prod()
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==21):
                    break

            self.state = 17
            self.match(YAPLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_prodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(YAPLParser.CLASS, 0)

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.TYPE_ID)
            else:
                return self.getToken(YAPLParser.TYPE_ID, i)

        def INHERITS(self):
            return self.getToken(YAPLParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FeatureContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_class_prod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_prod" ):
                listener.enterClass_prod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_prod" ):
                listener.exitClass_prod(self)




    def class_prod(self):

        localctx = YAPLParser.Class_prodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_prod)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.match(YAPLParser.CLASS)
            self.state = 20
            self.match(YAPLParser.TYPE_ID)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 21
                self.match(YAPLParser.INHERITS)
                self.state = 22
                self.match(YAPLParser.TYPE_ID)


            self.state = 25
            self.match(YAPLParser.T__0)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 26
                self.feature()
                self.state = 27
                self.match(YAPLParser.T__1)
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(YAPLParser.T__2)
            self.state = 35
            self.match(YAPLParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT_ID(self):
            return self.getToken(YAPLParser.OBJECT_ID, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)




    def id_(self):

        localctx = YAPLParser.IdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(YAPLParser.OBJECT_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(YAPLParser.IdContext,0)


        def TYPE_ID(self):
            return self.getToken(YAPLParser.TYPE_ID, 0)

        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FormalContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FormalContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = YAPLParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.id_()
                self.state = 40
                self.match(YAPLParser.T__3)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==37:
                    self.state = 41
                    self.formal()
                    self.state = 46
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==5:
                        self.state = 42
                        self.match(YAPLParser.T__4)
                        self.state = 43
                        self.formal()
                        self.state = 48
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 51
                self.match(YAPLParser.T__5)
                self.state = 52
                self.match(YAPLParser.T__6)
                self.state = 53
                self.match(YAPLParser.TYPE_ID)
                self.state = 54
                self.match(YAPLParser.T__0)
                self.state = 55
                self.expr(0)
                self.state = 56
                self.match(YAPLParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.id_()
                self.state = 59
                self.match(YAPLParser.T__6)
                self.state = 60
                self.match(YAPLParser.TYPE_ID)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 61
                    self.match(YAPLParser.T__7)
                    self.state = 62
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(YAPLParser.IdContext,0)


        def TYPE_ID(self):
            return self.getToken(YAPLParser.TYPE_ID, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = YAPLParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.id_()
            self.state = 68
            self.match(YAPLParser.T__6)
            self.state = 69
            self.match(YAPLParser.TYPE_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.IdContext)
            else:
                return self.getTypedRuleContext(YAPLParser.IdContext,i)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)


        def IF(self):
            return self.getToken(YAPLParser.IF, 0)

        def THEN(self):
            return self.getToken(YAPLParser.THEN, 0)

        def ELSE(self):
            return self.getToken(YAPLParser.ELSE, 0)

        def FI(self):
            return self.getToken(YAPLParser.FI, 0)

        def WHILE(self):
            return self.getToken(YAPLParser.WHILE, 0)

        def LOOP(self):
            return self.getToken(YAPLParser.LOOP, 0)

        def POOL(self):
            return self.getToken(YAPLParser.POOL, 0)

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.TYPE_ID)
            else:
                return self.getToken(YAPLParser.TYPE_ID, i)

        def IN(self):
            return self.getToken(YAPLParser.IN, 0)

        def NEW(self):
            return self.getToken(YAPLParser.NEW, 0)

        def ISVOID(self):
            return self.getToken(YAPLParser.ISVOID, 0)

        def NOT(self):
            return self.getToken(YAPLParser.NOT, 0)

        def INTEGER(self):
            return self.getToken(YAPLParser.INTEGER, 0)

        def STRING(self):
            return self.getToken(YAPLParser.STRING, 0)

        def TRUE(self):
            return self.getToken(YAPLParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(YAPLParser.FALSE, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = YAPLParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 72
                self.id_()
                self.state = 73
                self.match(YAPLParser.T__7)
                self.state = 74
                self.expr(25)
                pass

            elif la_ == 2:
                self.state = 76
                self.id_()
                self.state = 77
                self.match(YAPLParser.T__3)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2678064228370) != 0):
                    self.state = 78
                    self.expr(0)
                    self.state = 83
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==5:
                        self.state = 79
                        self.match(YAPLParser.T__4)
                        self.state = 80
                        self.expr(0)
                        self.state = 85
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 88
                self.match(YAPLParser.T__5)
                pass

            elif la_ == 3:
                self.state = 90
                self.match(YAPLParser.IF)
                self.state = 91
                self.expr(0)
                self.state = 92
                self.match(YAPLParser.THEN)
                self.state = 93
                self.expr(0)
                self.state = 94
                self.match(YAPLParser.ELSE)
                self.state = 95
                self.expr(0)
                self.state = 96
                self.match(YAPLParser.FI)
                pass

            elif la_ == 4:
                self.state = 98
                self.match(YAPLParser.WHILE)
                self.state = 99
                self.expr(0)
                self.state = 100
                self.match(YAPLParser.LOOP)
                self.state = 101
                self.expr(0)
                self.state = 102
                self.match(YAPLParser.POOL)
                pass

            elif la_ == 5:
                self.state = 104
                self.match(YAPLParser.T__0)
                self.state = 108 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 105
                    self.expr(0)
                    self.state = 106
                    self.match(YAPLParser.T__1)
                    self.state = 110 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2678064228370) != 0)):
                        break

                self.state = 112
                self.match(YAPLParser.T__2)
                pass

            elif la_ == 6:
                self.state = 114
                self.match(YAPLParser.T__10)
                self.state = 115
                self.id_()
                self.state = 116
                self.match(YAPLParser.T__6)
                self.state = 117
                self.match(YAPLParser.TYPE_ID)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 118
                    self.match(YAPLParser.T__7)
                    self.state = 119
                    self.expr(0)


                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 122
                    self.match(YAPLParser.T__4)
                    self.state = 123
                    self.id_()
                    self.state = 124
                    self.match(YAPLParser.T__6)
                    self.state = 125
                    self.match(YAPLParser.TYPE_ID)
                    self.state = 128
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==8:
                        self.state = 126
                        self.match(YAPLParser.T__7)
                        self.state = 127
                        self.expr(0)


                    self.state = 134
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 135
                self.match(YAPLParser.IN)
                self.state = 136
                self.expr(19)
                pass

            elif la_ == 7:
                self.state = 138
                self.match(YAPLParser.NEW)
                self.state = 139
                self.match(YAPLParser.TYPE_ID)
                pass

            elif la_ == 8:
                self.state = 140
                self.match(YAPLParser.ISVOID)
                self.state = 141
                self.expr(17)
                pass

            elif la_ == 9:
                self.state = 142
                _la = self._input.LA(1)
                if not(_la==13 or _la==16):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 143
                self.expr(12)
                pass

            elif la_ == 10:
                self.state = 144
                self.match(YAPLParser.NOT)
                self.state = 145
                self.expr(8)
                pass

            elif la_ == 11:
                self.state = 146
                self.match(YAPLParser.T__3)
                self.state = 147
                self.expr(0)
                self.state = 148
                self.match(YAPLParser.T__5)
                pass

            elif la_ == 12:
                self.state = 150
                self.id_()
                pass

            elif la_ == 13:
                self.state = 151
                self.match(YAPLParser.INTEGER)
                pass

            elif la_ == 14:
                self.state = 152
                self.match(YAPLParser.STRING)
                pass

            elif la_ == 15:
                self.state = 153
                self.match(YAPLParser.TRUE)
                pass

            elif la_ == 16:
                self.state = 154
                self.match(YAPLParser.FALSE)
                pass

            elif la_ == 17:
                self.state = 155
                self.match(YAPLParser.T__19)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 201
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 199
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                    if la_ == 1:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 158
                        if not self.precpred(self._ctx, 16):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 16)")
                        self.state = 159
                        self.match(YAPLParser.T__11)
                        self.state = 160
                        self.expr(17)
                        pass

                    elif la_ == 2:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 161
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 162
                        self.match(YAPLParser.T__12)
                        self.state = 163
                        self.expr(16)
                        pass

                    elif la_ == 3:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 164
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 165
                        self.match(YAPLParser.T__13)
                        self.state = 166
                        self.expr(15)
                        pass

                    elif la_ == 4:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 167
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 168
                        self.match(YAPLParser.T__14)
                        self.state = 169
                        self.expr(14)
                        pass

                    elif la_ == 5:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 170
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 171
                        self.match(YAPLParser.T__16)
                        self.state = 172
                        self.expr(12)
                        pass

                    elif la_ == 6:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 173
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 174
                        self.match(YAPLParser.T__17)
                        self.state = 175
                        self.expr(11)
                        pass

                    elif la_ == 7:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 176
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 177
                        self.match(YAPLParser.T__18)
                        self.state = 178
                        self.expr(10)
                        pass

                    elif la_ == 8:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 179
                        if not self.precpred(self._ctx, 24):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 24)")
                        self.state = 182
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==9:
                            self.state = 180
                            self.match(YAPLParser.T__8)
                            self.state = 181
                            self.match(YAPLParser.TYPE_ID)


                        self.state = 184
                        self.match(YAPLParser.T__9)
                        self.state = 185
                        self.id_()
                        self.state = 186
                        self.match(YAPLParser.T__3)
                        self.state = 195
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2678064228370) != 0):
                            self.state = 187
                            self.expr(0)
                            self.state = 192
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==5:
                                self.state = 188
                                self.match(YAPLParser.T__4)
                                self.state = 189
                                self.expr(0)
                                self.state = 194
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        self.state = 197
                        self.match(YAPLParser.T__5)
                        pass

             
                self.state = 203
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[5] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 16)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 15)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 14)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 13)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 11)
         

            if predIndex == 5:
                return self.precpred(self._ctx, 10)
         

            if predIndex == 6:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 7:
                return self.precpred(self._ctx, 24)
         




